--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>The Displaced</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700italic,700' rel='stylesheet' type='text/css'>
-
-  <link rel="stylesheet" href="css/landingstyles.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" href="css/landingstyles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
   </head>
 
@@ -14,7 +16,7 @@
 
     <div class="landingPageIntro">
       <h1>THE DISPLACED</h1>
-      <h2>Nearly 30 million children worldwide have been driven from their homes by war and persecution. Media coverage has lately focused on the Syrian dimension of this tragedy. But these 30 million girls and boys are from all over — Afghanistan, Iraq, Eritrea, Libya, Nigeria, Honduras, El Salvador, Myanmar, Bangladesh. This week’s issue of the magazine has been built around portraits of three of them: an 11-year-old boy from eastern Ukraine named Oleg, a 12-year-old Syrian girl named Hana and a 9-year-old South Sudanese boy named Chuol. All three have seen their homes destroyed; two have lost family members. Yet they carry on. Their stories are told in a multimedia documentary project, comprising a feature story, interviews, three photo essays and, for the first time in the history of The New York Times, a virtual-reality film. — Jake Silverstein</h2>
+      <h2>Nearly 30 million children worldwide have been driven from their homes by war and persecution. Media coverage has lately focused on the Syrian crisis, but these 30 million girls and boys are from all over. Here are portraits of three of them: an 11-year-old boy from eastern Ukraine named Oleg, a 12-year-old Syrian girl named Hana and a 9-year-old South Sudanese boy named Chuol. Their stories are told in a multimedia documentary project, including - for the first time in the history of The New York Times - a virtual-reality film. — Jake Silverstein</h2>
     </div>
 
       <div id="chuolThumb" class="thumb">
@@ -22,9 +24,9 @@
         <img src="images/chuolthumb.jpg" alt="Chuol" style="width:250px;height:250px;">
         <div class="textblock">
           <h3>CHUOL: SOUTH SUDAN</h3>
-          <h4>byline and such</h4>
-          <h5>another line?</h5>
-          <p id="pChuoltext">Here is type about Chuol. And it is several lines like thisere is type about Chuol. And it is several lines like this</p>
+            <h4>Text by <span class="name">MARC SANTORA</span></h4>
+            <h5>Photographs by <span class="name">LYNSEY ADDARIO</span></h5>
+          <p id="pChuoltext">Chuol, 9, remembers every terrifying detail of the seige on his village that left his father and grandfather dead. He was separated from his mother as he fled to the swamps.</p>
         </div>
       </div>
 
@@ -33,20 +35,20 @@
         <img src="images/hanathumb.jpg" alt="Hana" style="width:250px;height:250px;">
         <div class="textblock">
           <h3>HANA: LEBANON</h3>
-          <h4>byline and such</h4>
-          <h5>another line?</h5>
-          <p id="pHanatext">Here is type about Hana. And it is several lines like thisHere is type about Hana. And it is several lines like thisHere is type about Hana. And it is several lines like this.</p>
+            <h4>Text by <span class="name">SUSAN DOMINUS</span></h4>
+            <h5>Photographs by <span class="name">LYNSEY ADDARIO</span></h5>
+          <p id="pHanatext">At 12, she has lived one-quarter of her life in a debilitating state of suspension as a Syrian refugee in Lebanon. Days of school and play have been replaced by heavy labor in the fields.</p>
         </div>
       </div>
 
       <div id="olegThumb" class="thumb">
           <a href="oleg.html">
-          <img src="images/olegthumb.jpg" alt="Oleg" style="width:250px;height:250px;">
+          <img src="images/olegthumb2.jpg" alt="Oleg" style="width:250px;height:250px;">
           <div class="textblock">
             <h3>OLEG: UKRAINE</h3>
-            <h4>byline and such</h4>
-            <h5>another line?</h5>
-            <p id="pOlegtext">ere is type about Oleg. And it is several lines like thisere is type about Oleg. And it is several lines like this.</p>
+            <h4>Text by <span class="name">ANDREW E. KRAMER</span></h4>
+            <h5>Photographs by <span class="name">LYNSEY ADDARIO</span></h5>
+            <p id="pOlegtext">Oleg Teryokhin was forced out of his home in eastern Ukraine when fighting broke out between separatist militias and the pro-Western government in Kiev. Now, at age 11, he is living in the ruins of his former life. </p>
           </div>
       </div>
 
