--- a/Chuol.html
+++ b/Chuol.html
@@ -5,7 +5,9 @@
     <title>The Displaced</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700italic,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" type="text/css" href="css/jquery.pagepiling.css" />
   </head>
@@ -17,7 +19,7 @@
 
   <div id="pagepiling">
     <div class="section" id="backgroundTitle">
-      <div id="titleType">
+      <div id="titleTypeOleg">
         <h1>THE DISPLACED: CHUOL</h1>
         <h2>At 9, without his parents, he was forced to flee to the swamps.</h2>
         <h3>Photographs by LYNSEY ADDARIO | Text by MARC SANTORA | NOV. 5, 2015</h3>
@@ -85,15 +87,15 @@
       </div>
     </div>
 
-
   <div class="section" id="bottomNav">
     <div class="navtext">
-      <h1 class="navh1">THE DISPLACED</h2>
-      <h3 class="navh3">War has driven 30 million children from their homes.</h2>
-      <h3 class="navh3">These are the stories of three of them.</h2>
-      <a href="oleg.html">Ukraine: Oleg</a>
-      <a href="Chuol.html">South Sudan: Chuol</a>
-      <a href="hana.html">Lebanon: Hana</a>
+      <div class="bottomrule">
+      <a href="index.html" class="linknavh1">THE DISPLACED</a>
+      </div>
+      <h2 class="navh2">War has driven 30 million children from their homes.<br>These are the stories of three of them.</h2>
+      <a href="oleg.html" class="storylinks">Ukraine: Oleg</a>
+      <a href="Chuol.html" class="storylinks">South Sudan: Chuol</a>
+      <a href="hana.html" class="storylinks">Lebanon: Hana</a>
     </div>
     <div class="ad">
       <a href="#"> <img src="images/vrad.png" alt="vr ad" width= "100%"></a>
