--- a/oleg.html
+++ b/oleg.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>The Displaced</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700italic,700' rel='stylesheet' type='text/css'>
-
-  <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" type="text/css" href="css/jquery.pagepiling.css" />
   </head>
@@ -17,7 +18,7 @@
 
   <div id="pagepiling">
     <div class="section" id="olegBackgroundTitle">
-      <div id="titleType">
+      <div id="titleTypeOleg">
         <h1>THE DISPLACED: OLEG</h1>
         <h2>At 11, he is living in the ruins of his former life in the Ukraine.
 </h2>
@@ -28,22 +29,27 @@
     
     <div class="section" id="textFrame1">
       <div class="intro">
-        <p class="firstGraph"> Oleg Teryokhin was living with his mother and father in Nikishino, a rural village of fewer than 1,000 coal miners, farmers and their families in eastern Ukraine, when fighting broke out in April 2014. Hastily formed separatist militias, goaded and armed by Moscow, rose up in a rebellion against a new, pro-Western government in Kiev. In the first months of the conflict, the fighting was far from Nikishino, and Oleg, then 10, spent the early summer tearing about the village on his bicycle, zipping past its old brick cottages and apricot orchards. Then, in July, scorched scraps of clothing and bits of paper with foreign writing blew through the village — debris from the crash of Malaysia Airlines Flight 17, the passenger jet that was shot down, killing hundreds of people whose bodies lay in fields just south of the village. When Oleg carried some of these items home, his mother, Galina, was horrified that the conflict had come so close.</p>
+        <p class="firstGraph">Oleg Teryokhin was living in Nikishino, a rural village in eastern Ukraine, when fighting broke out in April 2014. Hastily formed separatist militias, goaded and armed by Moscow, rose up in a rebellion against a new, pro-Western government in Kiev. In July, scorched scraps of clothing and bits of paper with foreign writing blew through the village — debris from the crash of Malaysia Airlines Flight 17, the passenger jet that was shot down, killing hundreds of people whose bodies lay in fields just south of the village. Oleg, then 10, carried some of these items home to his mother, Galina.</p>
       </div>
     </div>
 
     <div class="section" id="osecondPhoto" class="photo">
-      <h4 class="blackTypeRight">“When I was holding onto a reed in the water, my feet not able to touch the ground, I would think I could die at any time if a crocodile came and got me,” Chuol remembers.</h4>
+      <div class="intro">
+      <h4 class= "whiteHanaTypeLeftBus">When Oleg and his family returned, the found their village transformed into surreal scenes of destruction.</h4>
+      </div>
     </div>
 
     <div class="section" id="textFrame2">
       <div class="intro">
-        <p class="firstGraph">For weeks, he and his grandmother swam and waded through snake-infested waters, dodging crocodiles, eating little more than grass. Chuol was constantly afraid that he might die. If a soldier did not kill him, he thought, an animal surely would.</p>
-        <p>“We would swim for so long until we could swim no more,” he recalled. “But we could sometimes still hear the gunfire and needed to keep moving. So we pulled ourselves along by the reeds.”</p>       
+        <p class="firstGraph">A few weeks later, she and Oleg fled, seeking shelter elsewhere in Ukraine. Oleg’s father, Aleksandr, a coal miner, stayed to tend to Galina’s elderly father but eventually was forced to leave and join his wife and son.</p> 
+        <p>As cease-fire talks halted the worst of the fighting in February, Oleg’s family, along with a few dozen others, returned to the village. They discovered her father’s body in the backyard of his house. He had probably been killed by shrapnel and had lain frozen outside for months. “Before the war, I visited him every day,” Oleg, now 11, said. “Now I visit his grave.”</p>      
       </div>
     </div>
    
     <div class="section" id="othirdPhoto" class="photo">
+      <div class="intro">
+        <h4 class= "whiteHanaTypeLeftBus">Oleg with his mother, Galina. During the fighting, a shell hit Oleg's bedroom and blew a hole through the roof.</h4>
+      </div>
     </div>
 
     <div class="section" id="textFrame3">
@@ -53,43 +59,41 @@
       </div>
     </div>
 
-    <div class="section" id="ofourthPhoto" class="photo">
-     <h4>Chuol’s grandmother said that while Chuol puts on a brave face, the pain is never far from his thoughts. ‘‘He tells me: ‘Let’s go back, and maybe we can find my mother. I want to go back. I don’t care if I die.’ ’’</h4>
-   </div>
-    
-    <div class="section" id="textFrame4">
-      <div class="intro">
-        <p class="firstGraph">Chuol lives with three dozen children and a half-dozen women in a small wood-and-mud hut with a fenced-in dirt yard of about 150 square feet. ‘‘With all the crowding, sometimes I wish I had my own space,’’ Chuol said. ‘‘When it is not raining, we will sleep in the yard, and the women will sleep in the hut. When it rains, sometimes they send the boys to sleep in the school.’’</p>
-      </div>
-    </div>
-
     <div class="section" id="ofifthPhoto" class="photo">
       <div class="intro">
-        <h4 class="blackTypeRight">In September, planes finally started dropping bags of grain again. The planes roar, which once frightened Chuol, is now a welcome sound.</h4>
+        <h4 class= "whiteHanaTypeLeftBus">Oleg with his mother, Galina. During the fighting, a shell hit Oleg's bedroom and blew a hole through the roof.</h4>
       </div>
     </div>
 
-    <div class="section" id="osixthPhoto" class="photo">
+    <div class="section" id="textFrame4">
       <div class="intro">
-        <h4 class= "whiteTypeLeft">When Unicef was finally able to reach this village, the first thing it did was set up a ‘‘child-friendly space’’ — a place where children can play, take school lessons and, most important, feel secure. </h4>
+        <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends.</p>
+       <p>Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
       </div>
     </div>
 
-
-  <div class="section" id="textFrame5">
-    <div class="intro">
-      <p class="firstGraph">Chuol lives with three dozen children and a half-dozen women in a small wood-and-mud hut with a fenced-in dirt yard of about 150 square feet. ‘‘With all the crowding, sometimes I wish I had my own space,’’ Chuol said. ‘‘When it is not raining, we will sleep in the yard, and the women will sleep in the hut. When it rains, sometimes they send the boys to sleep in the school.’’</p>
+        <div class="section" id="osixthPhoto" class="photo">
+      <div class="intro">
+        <h4 class= "whiteHanaTypeLeftBus">Oleg with his mother, Galina. During the fighting, a shell hit Oleg's bedroom and blew a hole through the roof.</h4>
+      </div>
     </div>
-  </div>
+
+    <div class="section" id="textFrame4">
+      <div class="intro">
+        <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends.</p>
+       <p>Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
+      </div>
+    </div>
 
   <div class="section" id="bottomNav">
     <div class="navtext">
-      <h1 class="navh1">THE DISPLACED</h2>
-      <h3 class="navh3">War has driven 30 million children from their homes.</h2>
-      <h3 class="navh3">These are the stories of three of them.</h2>
-      <a href="oleg.html">Ukraine: Oleg</a>
-      <a href="Chuol.html">South Sudan: Chuol</a>
-      <a href="hana.html">Lebanon: Hana</a>
+      <div class="bottomrule">
+      <a href="index.html" class="linknavh1">THE DISPLACED</a>
+      </div>
+      <h2 class="navh2">War has driven 30 million children from their homes.<br>These are the stories of three of them.</h2>
+      <a href="oleg.html" class="storylinks">Ukraine: Oleg</a>
+      <a href="Chuol.html" class="storylinks">South Sudan: Chuol</a>
+      <a href="hana.html" class="storylinks">Lebanon: Hana</a>
     </div>
     <div class="ad">
       <a href="#"> <img src="images/vrad.png" alt="vr ad" width= "100%"></a>
