--- a/hana.html
+++ b/hana.html
@@ -21,7 +21,7 @@
     <div class="section" id="hanabackgroundtitle">
       <div id="titleTypeOleg">
         <h1>THE DISPLACED: HANA</h1>
-        <h2>At 9, without his parents, he was forced to flee to the swamps.</h2>
+        <h2>At 12, she has lived one-quarter of her life as a Syrian refugee in Lebanon.</h2>
         <h3>Photographs by LYNSEY ADDARIO | Text by MARC SANTORA | NOV. 5, 2015</h3>
     </div>
   </div>
@@ -43,7 +43,7 @@
   </div>
    
     <div class="section" id="hthirdPhoto" class="photo">
-    <h4 class="whiteHanaTypeLeft">Hana worked in the nearby fields of Lebanon’s Bekaa Valley, picking fruits or vegetables, and everyone started early. At 5:45, they arrived at the cucumber field and spread out along the rows of vegetables.</h4>
+    <h4 class="whiteHanaTypeLeft">Hana worked in the nearby fields of Lebanon’s Bekaa Valley, picking fruits or vegetables, and everyone started early. At 5:45, they arrived at the field.</h4>
   </div>
 
   <div class="section" id="textFrame3">
@@ -54,7 +54,7 @@
   </div>
 
   <div class="section" id="hfourthPhoto" class="photo">
-    <h4 class="blackTypeLeft">By midmorning, Hana’s shoulder and back ached, and she was thirsty — there was never enough water. Time sometimes crawled at the settlement, but here, in the fields, its pace felt willfully slow, punishing.</h4>
+    <h4 class="blackTypeLeft">By midmorning, Hana’s shoulder and back ached, and she was thirsty — there was never enough water.</h4>
   </div>
     
     <div class="section" id="textFrame4">
@@ -65,7 +65,7 @@
 
       <div class="section" id="hfifthPhoto" class="photo">
       <div class="intro">
-        <h4 class= "whiteHanaTypeLeftBus">When .</h4>
+        <h4 class= "whiteHanaTypeLeftBus">Hana holding her cousin Marah as they make the bumpy ride to work in a plum orchard.</h4>
       </div>
     </div>
 
@@ -79,12 +79,13 @@
 
       <div class="section" id="hsixthPhoto" class="photo">
       <div class="intro">
-        <h4 class= "whiteHanaTypeLeftBus">Hana holding her cousin Marah as they make the bumpy ride to work in a plum orchard.</h4>
+        <h4 class= "whiteHanaTypeLeftBus">Hana naps under a mosquito net after a long morning working in the fields.</h4>
       </div>
     </div>
   <div class="section" id="textFrame6">
     <div class="intro">
-      <p class="firstGraph">Chuol lives with three dozen children and a half-dozen women in a small wood-and-mud hut with a fenced-in dirt yard of about 150 square feet. ‘‘With all the crowding, sometimes I wish I had my own space,’’ Chuol said. ‘‘When it is not raining, we will sleep in the yard, and the women will sleep in the hut. When it rains, sometimes they send the boys to sleep in the school.’’</p>
+      <p class="firstGraph">When Hana thought about the future, no clear image emerged: She found it too painful to try to hope for a return to life in Syria. But she did not think much about her future in Lebanon, either.</p>
+      <p>Hana liked to imagine that she might become a doctor one day, but if her family remained in the settlement for another few years, it seemed very likely that she, too, would be married there, maybe even raise children there, instead of dreaming of college or medical school. Her childhood was in a desperate, losing race with the war: Which would be finished first?</p>
     </div>
   </div>
 
