--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" href="css/landingstyles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+    <style>
+    #introimage {
+      width: 100%;
+      background-image: url("images/IntroPAR165575.jpg");
+      background-repeat: no-repeat;
+      background-position: top center;
+    }
+    </style>
   </head>
 
 <body class="landingBody">
-  <div class="container">
+      <div id="introimage">
+      </div>
 
+  <div class="container">
     <div class="landingPageIntro">
+
       <h1>THE DISPLACED</h1>
       <h2>Nearly 30 million children worldwide have been driven from their homes by war and persecution. Media coverage has lately focused on the Syrian crisis, but these 30 million girls and boys are from all over. Here are portraits of three of them: an 11-year-old boy from eastern Ukraine named Oleg, a 12-year-old Syrian girl named Hana and a 9-year-old South Sudanese boy named Chuol. Their stories are told in a multimedia documentary project, including - for the first time in the history of The New York Times - a virtual-reality film. — Jake Silverstein</h2>
     </div>
