--- a/oleg.html
+++ b/oleg.html
@@ -54,34 +54,32 @@
 
     <div class="section" id="textFrame3">
       <div class="intro">
-        <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends.</p>
-       <p>Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
+        <p class="firstGraph">Battles raged in and around Nikishino in the ensuing months, and the separatists eventually took control.</p>
+        <p>Most of the village’s 360 houses were wholly or partly destroyed. Oleg’s school was hit, too. Looking at the ruined building, Oleg said, “When the teachers would yell at us, we used to say: ‘Wouldn’t it be cool if the school blew up?’ I would never say that anymore.”</p>
       </div>
     </div>
 
     <div class="section" id="ofifthPhoto" class="photo">
       <div class="intro">
-        <h4 class= "whiteHanaTypeLeftBus">Oleg with his mother, Galina. During the fighting, a shell hit Oleg's bedroom and blew a hole through the roof.</h4>
       </div>
     </div>
 
     <div class="section" id="textFrame4">
       <div class="intro">
-        <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends.</p>
-       <p>Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
+        <p class="firstGraph">Most of the village’s 360 houses were wholly or partly destroyed. Oleg’s school was hit, too. Looking at the ruined building, Oleg said, “When the teachers would yell at us, we used to say: ‘Wouldn’t it be cool if the school blew up?’ I would never say that anymore.”</p>
+        <p>Oleg’s father has returned to work in the coal mines, and Oleg goes to school in a neighboring village. As his parents repair their home, the family lives in the portion of the house that is still standing. </p>
       </div>
     </div>
 
         <div class="section" id="osixthPhoto" class="photo">
       <div class="intro">
-        <h4 class= "whiteHanaTypeLeftBus">Oleg with his mother, Galina. During the fighting, a shell hit Oleg's bedroom and blew a hole through the roof.</h4>
+        <h4 class= "whiteHanaTypeLeftBus">Children in a background garden playing war with military clothing that remains scattered throughout the village.</h4>
       </div>
     </div>
 
     <div class="section" id="textFrame4">
       <div class="intro">
-        <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends.</p>
-       <p>Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
+        <p class="firstGraph">Once picturesque, Nikishino is today a tableau of shattered glass, broken concrete and scorched timber. “I tell myself: No matter what happens, even if shells are falling, I will never leave my home again,” Oleg said. He still speeds around the village on his bicycle with his friends, roaming this no man’s land.</p>
       </div>
     </div>
 
