--- a/hana.html
+++ b/hana.html
@@ -96,7 +96,7 @@
       </div>
       <h2 class="navh2">War has driven 30 million children from their homes.<br>These are the stories of three of them.</h2>
       <a href="oleg.html" class="storylinks">Ukraine: Oleg</a>
-      <a href="Chuol.html" class="storylinks">South Sudan: Chuol</a>
+      <a href="chuol.html" class="storylinks">South Sudan: Chuol</a>
       <a href="hana.html" class="storylinks">Lebanon: Hana</a>
     </div>
     <div class="ad">
