--- a/hana.html
+++ b/hana.html
@@ -110,7 +110,7 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.pagepiling.js"></script>
-<script src="js/index.js"></script>
+<script src="js/hanajs.js"></script>
 
 </body>
 
