--- a/oleg.html
+++ b/oleg.html
@@ -60,8 +60,6 @@
     </div>
 
     <div class="section" id="ofifthPhoto" class="photo">
-      <div class="intro">
-      </div>
     </div>
 
     <div class="section" id="textFrame4">
@@ -103,7 +101,7 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.pagepiling.js"></script>
-<script src="js/index.js"></script>
+<script src="js/olegjs.js"></script>
 
 </body>
 
