--- a/hana.html
+++ b/hana.html
@@ -19,7 +19,7 @@
   <div id="pagepiling">
    
     <div class="section" id="hanabackgroundtitle">
-      <div id="titleTypeOleg">
+      <div id="titleTypeHana">
         <h1>THE DISPLACED: HANA</h1>
         <h2>At 12, she has lived one-quarter of her life as a Syrian refugee in Lebanon.</h2>
         <h3>Photographs by LYNSEY ADDARIO | Text by MARC SANTORA | NOV. 5, 2015</h3>
@@ -48,8 +48,7 @@
 
   <div class="section" id="textFrame3">
     <div class="intro">
-      <p class="firstGraph">Hana walked up and down the rows of cucumbers, collecting from the pickers. When her crate was full — it sometimes weighed 20 pounds or more — she carried it on her bony shoulder, to where it would be sorted. But with every trip, the temperature rose, the trek grew longer.</p>
-      <p>Hana's father remembers when he was land owner who had employees working the fields. Now his children are forced to do that work.</p>
+      <p class="firstGraph">Hana walked up and down the rows of cucumbers, collecting from the pickers. When her crate was full — it sometimes weighed 20 pounds or more — she carried it on her bony shoulder, to where it would be sorted. But with every trip, the temperature rose, the trek grew longer. Hana's father remembers when he was land owner who had employees working the fields. Now his children are forced to do that work.</p>
     </div>
   </div>
 
@@ -72,8 +71,7 @@
 
  <div class="section" id="textFrame4">
       <div class="intro">
-        <p class="firstGraph">“It would have been better to die in our home than die like this,” she screamed at her mother. “Why did you bring us here?” They ran to an abandoned building to wait out the shooting; how long it lasted, she could not say.</p>
-      <p>That day, her life as a refugee began. She entered a new world, and she never stopped wishing she could return to the old one.</p>
+        <p class="firstGraph">“It would have been better to die in our home than die like this,” she screamed at her mother. “Why did you bring us here?” They ran to an abandoned building to wait out the shooting; how long it lasted, she could not say. That day, her life as a refugee began. She entered a new world, and she never stopped wishing she could return to the old one.</p>
       </div>
     </div>
 
