--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <div id="introimage">
       </div>
 
+    <h6>Kurdish refugees in 1974, after an Iraqi bombing. Credit Bruno Barbey/Magnum Photos</h6>
   <div class="container">
     <div class="landingPageIntro">
-
       <h1>THE DISPLACED</h1>
-      <h2>Nearly 30 million children worldwide have been driven from their homes by war and persecution. Media coverage has lately focused on the Syrian crisis, but these 30 million girls and boys are from all over. Here are portraits of three of them: an 11-year-old boy from eastern Ukraine named Oleg, a 12-year-old Syrian girl named Hana and a 9-year-old South Sudanese boy named Chuol. Their stories are told in a multimedia documentary project, including - for the first time in the history of The New York Times - a virtual-reality film. — Jake Silverstein</h2>
+      <h2>Nearly 30 million children worldwide have been driven from their homes by war and persecution &mdash; more than at any time since World War II. Media coverage has lately focused on the Syrian crisis, but these girls and boys are from all over. Here are portraits of three of them: an 11-year-old boy from eastern Ukraine named Oleg, a 12-year-old Syrian girl named Hana and a 9-year-old South Sudanese boy named Chuol. Their stories are told in a multimedia documentary project, including &mdash; for the first time in the history of The New York Times &mdash; a virtual-reality film. &mdash; Jake Silverstein</h2>
     </div>
 
       <div id="chuolThumb" class="thumb">
