--- a/chuol.html
+++ b/chuol.html
@@ -29,8 +29,7 @@
     
   <div class="section" id="textFrame1">
     <div class="intro">
-      <p class="firstGraph"> One night in May, 2013, the fighting in South Sudan came to Chuol’s village. He was only 7. He remembers every terrifying detail. Women were raped and men murdered. His father and grandfather were herded into a small hut and burned alive. With his mother and grandmother, Chuol fled into the swamp.</p>
-      <p>In the chaos, his mother ran in another direction, and they lost her. For months they did not know if she was dead or alive.</p>
+      <p class="firstGraph"> One night in May, 2013, the fighting in South Sudan came to Chuol’s village. He was only 7. He remembers every terrifying detail. Women were raped and men murdered. His father and grandfather were herded into a small hut and burned alive. With his mother and grandmother, Chuol fled into the swamp. In the chaos, his mother ran in another direction, and they lost her. For months they did not know if she was dead or alive.</p>
     </div>
   </div>
 
@@ -40,8 +39,7 @@
 
   <div class="section" id="textFrame2">
     <div class="intro">
-      <p class="firstGraph">For weeks, he and his grandmother swam and waded through snake-infested waters, dodging crocodiles, eating little more than grass. Chuol was constantly afraid that he might die. If a soldier did not kill him, he thought, an animal surely would.</p>
-      <p>“We would swim for so long until we could swim no more,” he recalled. “But we could sometimes still hear the gunfire and needed to keep moving. So we pulled ourselves along by the reeds.”</p>       
+      <p class="firstGraph">For weeks, he and his grandmother swam and waded through snake-infested waters, dodging crocodiles, eating little more than grass. Chuol was constantly afraid that he might die. If a soldier did not kill him, he thought, an animal surely would. “We would swim for so long until we could swim no more,” he recalled. “But we could sometimes still hear the gunfire and needed to keep moving. So we pulled ourselves along by the reeds.”</p>       
     </div>
   </div>
    
@@ -50,8 +48,7 @@
 
   <div class="section" id="textFrame3">
     <div class="intro">
-      <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends.</p>
-      <p>Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
+      <p class="firstGraph">When Chuol arrived on this small island in the swamp, joining tens of thousands of others who fled the fighting, he often liked to be by himself. Gradually, he made friends. Most afternoons, he played soccer. ‘‘When I score a goal, I do like I have seen Chelsea players do on television,’’ he said. ‘‘I run to the corner, and all my teammates will come run up to me and hug me and congratulate me.’’</p>
     </div>
   </div>
 
