--- a/hana.html
+++ b/hana.html
@@ -72,8 +72,7 @@
 
  <div class="section" id="textFrame4">
       <div class="intro">
-        <p class="firstGraph">“It would have been better to die in our home than die like this,” she screamed at her mother. “Why did you bring us here?” They ran to an abandoned building to wait out the shooting; how long it lasted, she could not say.</p>
-      <p>That day, her life as a refugee began. She entered a new world, and she never stopped wishing she could return to the old one.</p>
+        <p class="firstGraph">“It would have been better to die in our home than die like this,” she screamed at her mother. “Why did you bring us here?” They ran to an abandoned building to wait out the shooting; how long it lasted, she could not say. That day, her life as a refugee began. She entered a new world, and she never stopped wishing she could return to the old one.</p>
       </div>
     </div>
 
