one graph again

--- a/hana.html
+++ b/hana.html
@@ -48,8 +48,7 @@
 
   <div class="section" id="textFrame3">
     <div class="intro">
-      <p class="firstGraph">Hana walked up and down the rows of cucumbers, collecting from the pickers. When her crate was full — it sometimes weighed 20 pounds or more — she carried it on her bony shoulder, to where it would be sorted. But with every trip, the temperature rose, the trek grew longer.</p>
-      <p>Hana's father remembers when he was land owner who had employees working the fields. Now his children are forced to do that work.</p>
+      <p class="firstGraph">Hana walked up and down the rows of cucumbers, collecting from the pickers. When her crate was full — it sometimes weighed 20 pounds or more — she carried it on her bony shoulder, to where it would be sorted. But with every trip, the temperature rose, the trek grew longer. Hana's father remembers when he was land owner who had employees working the fields. Now his children are forced to do that work.</p>
     </div>
   </div>
 
@@ -83,8 +82,7 @@
     </div>
   <div class="section" id="textFrame6">
     <div class="intro">
-      <p class="firstGraph">When Hana thought about the future, no clear image emerged: She found it too painful to try to hope for a return to life in Syria. But she did not think much about her future in Lebanon, either.</p>
-      <p>Hana liked to imagine that she might become a doctor one day, but if her family remained in the settlement for another few years, it seemed very likely that she, too, would be married there, maybe even raise children there, instead of dreaming of college or medical school. Her childhood was in a desperate, losing race with the war: Which would be finished first?</p>
+      <p class="firstGraph">When Hana thought about the future, no clear image emerged: She found it too painful to try to hope for a return to life in Syria. But she did not think much about her future in Lebanon, either. Hana liked to imagine that she might become a doctor one day, but if her family remained in the settlement for another few years, it seemed very likely that she, too, would be married there, maybe even raise children there, instead of dreaming of college or medical school. Her childhood was in a desperate, losing race with the war: Which would be finished first?</p>
     </div>
   </div>
 
