--- a/oleg.html
+++ b/oleg.html
@@ -41,8 +41,7 @@
 
     <div class="section" id="textFrame2">
       <div class="intro">
-        <p class="firstGraph">A few weeks later, she and Oleg fled, seeking shelter elsewhere in Ukraine. Oleg’s father, Aleksandr, a coal miner, stayed to tend to Galina’s elderly father but eventually was forced to leave and join his wife and son.</p> 
-        <p>As cease-fire talks halted the worst of the fighting in February, Oleg’s family, along with a few dozen others, returned to the village. They discovered her father’s body in the backyard of his house. He had probably been killed by shrapnel and had lain frozen outside for months. “Before the war, I visited him every day,” Oleg, now 11, said. “Now I visit his grave.”</p>      
+        <p class="firstGraph">A few weeks later, she and Oleg fled, seeking shelter elsewhere in Ukraine. Oleg’s father, Aleksandr, a coal miner, stayed to tend to Galina’s elderly father but eventually was forced to leave and join his wife and son. As cease-fire talks halted the worst of the fighting in February, Oleg’s family, along with a few dozen others, returned to the village. They discovered her father’s body in the backyard of his house. He had probably been killed by shrapnel and had lain frozen outside for months. “Before the war, I visited him every day,” Oleg, now 11, said. “Now I visit his grave.”</p>      
       </div>
     </div>
    
@@ -54,8 +53,7 @@
 
     <div class="section" id="textFrame3">
       <div class="intro">
-        <p class="firstGraph">Battles raged in and around Nikishino in the ensuing months, and the separatists eventually took control.</p>
-        <p>Most of the village’s 360 houses were wholly or partly destroyed. Oleg’s school was hit, too. Looking at the ruined building, Oleg said, “When the teachers would yell at us, we used to say: ‘Wouldn’t it be cool if the school blew up?’ I would never say that anymore.”</p>
+        <p class="firstGraph">Battles raged in and around Nikishino in the ensuing months, and the separatists eventually took control. Most of the village’s 360 houses were wholly or partly destroyed. Oleg’s school was hit, too. Looking at the ruined building, Oleg said, “When the teachers would yell at us, we used to say: ‘Wouldn’t it be cool if the school blew up?’ I would never say that anymore.”</p>
       </div>
     </div>
 
@@ -66,8 +64,7 @@
 
     <div class="section" id="textFrame4">
       <div class="intro">
-        <p class="firstGraph">Most of the village’s 360 houses were wholly or partly destroyed. Oleg’s school was hit, too. Looking at the ruined building, Oleg said, “When the teachers would yell at us, we used to say: ‘Wouldn’t it be cool if the school blew up?’ I would never say that anymore.”</p>
-        <p>Oleg’s father has returned to work in the coal mines, and Oleg goes to school in a neighboring village. As his parents repair their home, the family lives in the portion of the house that is still standing. </p>
+        <p class="firstGraph">Most of the village’s 360 houses were wholly or partly destroyed. Oleg’s school was hit, too. Looking at the ruined building, Oleg said, “When the teachers would yell at us, we used to say: ‘Wouldn’t it be cool if the school blew up?’ I would never say that anymore.” Oleg’s father has returned to work in the coal mines, and Oleg goes to school in a neighboring village. As his parents repair their home, the family lives in the portion of the house that is still standing. </p>
       </div>
     </div>
 
