fixes titles restores hires ukraine

--- a/chuol.html
+++ b/chuol.html
@@ -19,7 +19,7 @@
 
   <div id="pagepiling">
     <div class="section" id="backgroundTitle">
-      <div id="titleTypeOleg">
+      <div id="titleTypeHana">
         <h1>THE DISPLACED: CHUOL</h1>
         <h2>At 9, without his parents, he was forced to flee to the swamps.</h2>
         <h3>Photographs by LYNSEY ADDARIO | Text by MARC SANTORA | NOV. 5, 2015</h3>
