--- a/oleg.html
+++ b/oleg.html
@@ -18,7 +18,7 @@
 
   <div id="pagepiling">
     <div class="section" id="olegBackgroundTitle">
-      <div id="titleTypeOleg">
+      <div id="titleTypeHana">
         <h1>THE DISPLACED: OLEG</h1>
         <h2>At 11, he is living in the ruins of his former life in the Ukraine.
 </h2>
